Statically enforce primitive string size invariant.
Otherwise it is too easy to produce a string violating the size
constraints (e.g., using Ltac2), and prove False.

This also adds an Ltac2 API to the Pstring module.

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -678,6 +678,7 @@ through the <tt>Require Import</tt> command.</p>
     user-contrib/Ltac2/Pattern.v
     user-contrib/Ltac2/Printf.v
     user-contrib/Ltac2/Proj.v
+    user-contrib/Ltac2/Pstring.v
     user-contrib/Ltac2/RedFlags.v
     user-contrib/Ltac2/Ref.v
     user-contrib/Ltac2/Std.v
