--- a/plugins/derive/dune
+++ b/plugins/derive/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name derive_plugin)
  (public_name coq-core.plugins.derive)
  (synopsis "Coq's derive plugin")
