--- a/proofs/dune
+++ b/proofs/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name proofs)
  (synopsis "Coq's Higher-level Refinement Proof Engine and Top-level Proof Structure")
  (public_name coq-core.proofs)
