--- a/checker/dune
+++ b/checker/dune
@@ -2,7 +2,7 @@
 ;
 ; If we don't pack checker we will have a problem here due to
 ; duplicate module names in the whole build.
-(library
+(library (lint (pps coqlint))
  (name coq_checklib)
  (public_name coq-core.checklib)
  (synopsis "Coq's Standalone Proof Checker")
