--- a/perf/dune
+++ b/perf/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name coqperf)
  (synopsis "Instruction count using Linux perf.")
  (public_name coq-core.perf)
