--- a/plugins/btauto/dune
+++ b/plugins/btauto/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name btauto_plugin)
  (public_name coq-core.plugins.btauto)
  (synopsis "Coq's btauto plugin")
