--- a/pretyping/dune
+++ b/pretyping/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name pretyping)
  (synopsis "Coq's Type Inference Component (Pretyper)")
  (public_name coq-core.pretyping)
