--- a/printing/dune
+++ b/printing/dune
@@ -1,4 +1,4 @@
-(library
+(library (lint (pps coqlint))
  (name printing)
  (synopsis "Coq's Term Pretty Printing Library")
  (public_name coq-core.printing)
