Disable linter on dev coqide and configure
The debug stuff in dev probably doesn't care about exn catchalls

configure probably doesn't care either

I don't understand the ones in coqide enough to do anything other than
grandfather them in.

--- a/dev/dune
+++ b/dev/dune
@@ -1,4 +1,4 @@
-(library (lint (pps coqlint))
+(library
  (name dev)
  (public_name coq-core.dev)
  (synopsis "Coq's Debug Printers")
@@ -6,7 +6,7 @@
  (modules top_printers vm_printers)
  (libraries coq-core.toplevel coq-core.plugins.ltac))
 
-(library (lint (pps coqlint))
+(library
  (name debugger_support)
  (public_name coq-core.debugger_support)
  (synopsis "Coq Support for ocamldebug")
