[lib] [mutex] Fix build for OCaml 5.x due to missing caml_mutex_unlock
Problem introduced in #19175

Co-authored-by: Guillaume Munch-Maccagnoni <Guillaume.Munch-Maccagnoni@inria.fr>
(cherry picked from commit a74f3580d3ac4ae726059c7ca2804148b6ff8591)

--- a/clib/dune
+++ b/clib/dune
@@ -19,3 +19,18 @@
  (targets unicodetable.ml)
  (deps (:gen ./unicodetable_gen.exe))
  (action (run %{gen} %{targets})))
+
+(rule
+ (target mutex_aux.ml)
+ (action (copy mutex_aux_4.x.ml %{target}))
+ (enabled_if (< %{ocaml_version} 5.0)))
+
+(rule
+ (target mutex_aux.ml)
+ (action (copy mutex_aux_5.0.ml %{target}))
+ (enabled_if (and (>= %{ocaml_version} 5.0) (< %{ocaml_version} 5.1))))
+
+(rule
+ (target mutex_aux.ml)
+ (action (copy mutex_aux_5.x.ml %{target}))
+ (enabled_if (>= %{ocaml_version} 5.1)))
