--- a/coqide.opam
+++ b/coqide.opam
@@ -23,7 +23,7 @@ depends: [
   "conf-adwaita-icon-theme"
   "coqide-server" {= version}
   "cairo2" {>= "0.6.4"}
-  "lablgtk3-sourceview3" {>= "3.1.2"}
+  "lablgtk3-sourceview3" {>= "3.1.2" & (>= "3.1.5" | os != "windows")}
   "odoc" {with-doc}
 ]
 build: [
