Fix syntax on gitlab file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1047,7 +1047,7 @@ plugin:ci-smtcoq:
 plugin:ci-smtcoq_trakt:
   extends: .ci-template-flambda
   needs:
-  - build:edge-flambda
+  - build:edge+flambda
   - library:ci-trakt
   stage: build-2
 
