--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1047,15 +1047,17 @@ plugin:ci-smtcoq:
 plugin:ci-smtcoq_trakt:
   extends: .ci-template-flambda
   needs:
-  - build:edge-flambda
+  - build:edge+flambda
   - library:ci-trakt
   stage: build-2
 
 plugin:ci-sniper:
-  extends: .ci-template
+  extends: .ci-template-flambda
   needs:
-  - build:base
+  - build:edge+flambda
   - plugin:ci-smtcoq_trakt
+  - plugin:ci-elpi_hb
+  - plugin:ci-metacoq
 
 plugin:ci-stalmarck:
   extends: .ci-template
