--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1051,7 +1051,7 @@ plugin:ci-smtcoq_trakt:
   - library:ci-trakt
   stage: build-3+
 
-plugin:ci-sniper:
+library:ci-sniper:
   extends: .ci-template-flambda
   needs:
   - build:edge+flambda
