Split the cc plugin into a core package and an Ltac1 syntax.

--- a/plugins/cc/dune
+++ b/plugins/cc/dune
@@ -1,7 +1,16 @@
 (library
+ (name cc_core_plugin)
+ (public_name coq-core.plugins.cc_core)
+ (synopsis "Coq's congruence closure plugin")
+ (modules (:standard \ g_congruence))
+ (libraries coq-core.tactics))
+
+(library
  (name cc_plugin)
  (public_name coq-core.plugins.cc)
- (synopsis "Coq's congruence closure plugin")
- (libraries coq-core.plugins.ltac))
+ (synopsis "Coq's congruence closure plugin (Ltac1 syntax)")
+ (modules g_congruence)
+ (flags :standard -open Cc_core_plugin)
+ (libraries coq-core.plugins.ltac coq-core.plugins.cc_core))
 
 (coq.pp (modules g_congruence))
