--- a/plugins/nsatz/dune
+++ b/plugins/nsatz/dune
@@ -1,7 +1,16 @@
 (library
+ (name nsatz_core_plugin)
+ (public_name coq-core.plugins.nsatz_core)
+ (synopsis "Coq's nsatz solver plugin")
+ (modules (:standard \ g_nsatz))
+ (libraries coq-core.tactics))
+
+(library
  (name nsatz_plugin)
  (public_name coq-core.plugins.nsatz)
- (synopsis "Coq's nsatz solver plugin")
- (libraries coq-core.plugins.ltac))
+ (synopsis "Coq's nsatz solver plugin (Ltac1 syntax)")
+ (modules g_nsatz)
+ (flags :standard -open Nsatz_core_plugin)
+ (libraries coq-core.plugins.nsatz_core coq-core.plugins.ltac))
 
 (coq.pp (modules g_nsatz))
