"make world" and dune default target don't build coqide
makefile: add coqide target

The current behaviour seems mostly annoying to those who don't care
about coqide.

--- a/dune
+++ b/dune
@@ -21,7 +21,7 @@
 
 (alias
  (name default)
- (deps coq-core.install coq-stdlib.install coqide-server.install coqide.install))
+ (deps coq-core.install coq-stdlib.install coqide-server.install))
 
 (install
  (section lib)
