--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,7 +110,7 @@ before_script:
     - make $DUNE_TARGET
     - tar cfj _build.tar.bz2 _build
   variables:
-    DUNE_TARGET: world
+    DUNE_TARGET: "world coqide"
   artifacts:
     name: "$CI_JOB_NAME"
     when: always
