--- a/tools/CoqMakefile.in
+++ b/tools/CoqMakefile.in
@@ -33,7 +33,7 @@ OTHERFLAGS        := $(COQMF_OTHERFLAGS)
 COQCORE_SRC_SUBDIRS := $(COQMF_COQ_SRC_SUBDIRS)
 OCAMLLIBS         := $(COQMF_OCAMLLIBS)
 SRC_SUBDIRS       := $(COQMF_SRC_SUBDIRS)
-COQLIBS           := $(COQMF_COQLIBS) $(COQMF_INDEP_COQLIBS)
+COQLIBS           := $(COQMF_COQLIBS)
 COQLIBS_NOML      := $(COQMF_COQLIBS_NOML)
 CMDLINE_COQLIBS   := $(COQMF_CMDLINE_COQLIBS)
 COQLIB            := $(COQMF_COQLIB)
@@ -417,13 +417,13 @@ LIB_MAKEFILE_NAME = MAKELIB.coq
 all:
 	$(HIDE)$(MAKE) --no-print-directory -f "$(SELF)" pre-all
 ifneq ($(strip $(COQMF_INDEP_COQLIBS)),)
-	$(HIDE)IND=0; \	
+	$(HIDE)IND=0; \
 	for lib in $(COQMF_INDEP_COQLIBS); do \
 		if [ $$((IND % 3)) -eq 1 ]; then \
       cd $$lib ; \
 			$(COQMKFILE) -f _CoqProject -o $(LIB_MAKEFILE_NAME); \
 			$(MAKE) -f $(LIB_MAKEFILE_NAME); \
-			rm -f $(LIB_MAKEFILE_NAME) $(LIB_MAKEFILE_NAME).conf .$(LIB_MAKEFILE_NAME).d; \ 
+			rm -f $(LIB_MAKEFILE_NAME) $(LIB_MAKEFILE_NAME).conf .$(LIB_MAKEFILE_NAME).d; \
       cd .. ; \
 		fi; \
 	  IND=$$((IND + 1)); \
