Rename OPAM package coq-stdlib -> rocq-core
This is only the coq-stdlib package in current dir that now only
contains the prelude and a few other things.
The actual coq-stdlib package in stdlib dir remains untouched.

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -43,7 +43,7 @@ jobs:
           eval $(opam env)
           ./configure -prefix "$(pwd)/_install_ci" -native-compiler no
           make dunestrap
-          dune build -p coq-core,coq-stdlib,coqide-server,coqide,coq
+          dune build -p coq-core,rocq-core,coqide-server,coqide
         env:
           MACOSX_DEPLOYMENT_TARGET: "10.11"
           NJOBS: "2"
@@ -51,7 +51,7 @@ jobs:
       - name: Install Coq
         run: |
           eval $(opam env)
-          dune install --prefix="$(pwd)/_install_ci" coq-core coq-stdlib coqide-server coqide coq
+          dune install --prefix="$(pwd)/_install_ci" coq-core rocq-core coqide-server coqide
 
       - name: Run Coq Test Suite
         run: |
