--- a/stdlib/coq-stdlib.opam
+++ b/stdlib/coq-stdlib.opam
@@ -25,7 +25,7 @@ bug-reports: "https://github.com/coq/coq/issues"
 depends: [
   "dune" {>= "3.8"}
   "coq-core"
-  "rocq-init" {= version}
+  "rocq-core" {= version}
   "odoc" {with-doc}
 ]
 depopts: ["coq-native"]
