coq_makefile PROFILING generates foo.vo.prof.json instead of foo.v.prof.json
This makes it easier to work with other targets such as validate

--- a/tools/CoqMakefile.in
+++ b/tools/CoqMakefile.in
@@ -308,8 +308,8 @@ else
 endif
 
 ifneq (,$(PROFILING))
-  PROFILE_ARG=-profile $<.prof.json
-  PROFILE_ZIP=gzip -f $<.prof.json
+  PROFILE_ARG=-profile $@.prof.json
+  PROFILE_ZIP=gzip -f $@.prof.json
 else
   PROFILE_ARG=
   PROFILE_ZIP=true
