--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -871,6 +871,7 @@ library:ci-jasmin:
   - library:ci-mathcomp
   - library:ci-mathcomp_word
   stage: build-3+
+  allow_failure: true
 
 library:ci-http:
   extends: .ci-template-flambda
