[CI] Remove one more dependency to MathComp 1
This was a fake dependency, QuickChick perfectly builds with MC2 but
was kept on MC1 for some nasty menhir version kludge in ci-json.
This copies in ci-json the menhir config already used by CompCert.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -981,7 +981,7 @@ plugin:ci-quickchick:
   - build:edge+flambda
   - library:ci-ext_lib
   - library:ci-simple_io
-  - library:ci-mathcomp_1
+  - library:ci-mathcomp
   stage: build-3+
 
 plugin:ci-quickchick_test:
