--- a/stdlib/test-suite/Makefile
+++ b/stdlib/test-suite/Makefile
@@ -146,7 +146,7 @@ all: run
 else
 all:
 	$(MAKE) run | tee time-of-build.log
-	python ../tools/make-one-time-file.py --real time-of-build.log
+	python ../../tools/make-one-time-file.py --real time-of-build.log
 	$(MAKE) report
 endif
 endif
