--- a/dev/ci/gitlab-modes/tagged-runners.yml
+++ b/dev/ci/gitlab-modes/tagged-runners.yml
@@ -1,6 +1,6 @@
 .auto-use-tags:
   tags:
-    - $TAGGED_RUNNERS
+    - coq-ci-test
 
 # making this configurable is too annoying if we want to support > 1 tag
 # and not sure small is enough
