[CI] Keep ci-http allow_failure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -886,6 +886,7 @@ library:ci-http:
   - library:ci-itree_io
   - plugin:ci-quickchick
   stage: build-3+
+  allow_failure: true # C.f. https://github.com/coq/coq/pull/19672
 
 library:ci-trakt:
   extends: .ci-template-flambda
